@@ -1,3 +1,7 @@
+20030603
+ - (djm) Replace setproctitle replacement with code derived from 
+   UCB sendmail
+
 20030602
  - (djm) Fix segv from bad reordering in auth-pam.c
  - (djm) Always use saved_argv in sshd.c as compat_init_setproctitle may 
@@ -1644,4 +1648,4 @@
      save auth method before monitor_reset_key_state(); bugzilla bug #284;
      ok provos@
 
-$Id: ChangeLog,v 1.2763 2003/06/02 09:10:41 djm Exp $
+$Id: ChangeLog,v 1.2764 2003/06/03 00:14:28 djm Exp $
